# AuthApp

./: .gitignore  database.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  users.db
api/: auth_controller.py  image_analysis_controller.py  link_controller.py  movie_controller.py  rating_controller.py  tag_controller.py
api/dto/: __init__.py  auth_dto.py  link_dto.py  movie_dto.py  rating_dto.py  tag_dto.py  user_response.py
dao/: __init__.py  link_dao.py  movie_dao.py  rating_dao.py  tag_dao.py  user_dao.py
db/: __init__.py  database.py  seed.py
dto/: login_data.py  user_create.py  user_jwt_response.py  user_response.py
model/: link.py  movie.py  rating.py  tag.py  user.py
security/: __init__.py  jwt_handler.py
test/: conftest.py
test/auth/: conftest.py  test_login.py  test_user_details.py  test_users.py
test/crud/: conftest.py  test_links.py  test_movies.py  test_ratings.py  test_tags.py
